--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,8 @@ body {
 .section-features {
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(5, 60, 247, 0.6), rgba(5, 32, 123, 0.6)), url(./images/background2.jpg);
+  background-position: top;
+  background-size: cover;
   transform: skewY(-7deg);
   margin-top: -8rem; }
   .section-features > * {
@@ -820,21 +822,33 @@ body {
     clear: both; }
   .row [class^="col-"] {
     float: left; }
-    .row [class^="col-"]:not(:last-child) {
-      margin-right: 6rem; }
-      @media (max-width: 56.25em) {
-        .row [class^="col-"]:not(:last-child) {
-          margin-right: 0;
-          margin-bottom: 6rem; } }
     @media (max-width: 56.25em) {
       .row [class^="col-"] {
         width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
+    .row .col-1-of-2:not(:nth-child(2n+2)) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row .col-1-of-2:not(:nth-child(2n+2)) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem) / 3); }
+    .row .col-1-of-3:not(:nth-child(3n+3)) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row .col-1-of-3:not(:nth-child(3n+3)) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 6rem) / 4); }
+    .row .col-1-of-4:not(:nth-child(4n+4)) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row .col-1-of-4:not(:nth-child(4n+4)) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
   .row .col-2-of-3 {
     width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-2-of-4 {
