--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -15,13 +15,6 @@
 
     [class^="col-"] {
         float: left;
-        &:not(:last-child) {
-            margin-right: $gutter-horizontal;
-            @include responsive(tab-port) {
-                margin-right: 0;
-                margin-bottom: $gutter-vertical-small;
-            }
-        }
 
         @include responsive(tab-port) {
             width: 100% !important;
@@ -30,13 +23,33 @@
 
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
-        
+        &:not(:nth-child(2n+2)) {
+            margin-right: $gutter-horizontal;
+            @include responsive(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
     }
     .col-1-of-3 {
         width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+        &:not(:nth-child(3n+3)) {
+            margin-right: $gutter-horizontal;
+            @include responsive(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
     }
     .col-1-of-4 {
         width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+        &:not(:nth-child(4n+4)) {
+            margin-right: $gutter-horizontal;
+            @include responsive(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
     }
     .col-2-of-3 {
         width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
