--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -10,6 +10,8 @@
 .section-features {
     padding: 20rem 0;
     background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.6), rgba($color-primary-dark, 0.6)), url(./images/background2.jpg);
+    background-position: top;
+    background-size: cover;
     transform: skewY(-7deg);
     margin-top: -8rem;
     &>* {
